testing/framework/resources/Advanced/Failing/mondrian/query6118.e
USA	CA	San Francisco	Store 14	Small Grocery	Strehlo	22478	15321	4294	2863	t	4365 Indigo Ct	USA	CA	Palo Alto	5005	Andre Thompson	Andre Thompson	M	M	High School Degree	$30K - $50K
USA	CA	San Francisco	Store 14	Small Grocery	Strehlo	22478	15321	4294	2863	t	4365 Indigo Ct	USA	CA	Palo Alto	3962	Jane Rogers	Jane Rogers	M	S	High School Degree	$10K - $30K
USA	CA	San Francisco	Store 14	Small Grocery	Strehlo	22478	15321	4294	2863	t	4365 Indigo Ct	USA	CA	Palo Alto	4387	Paul Burmeister	Paul Burmeister	F	M	Bachelors Degree	$110K - $130K
USA	CA	San Francisco	Store 14	Small Grocery	Strehlo	22478	15321	4294	2863	t	4365 Indigo Ct	USA	CA	Palo Alto	7495	Sandy Melton	Sandy Melton	F	S	High School Degree	$50K - $70K
